@@ -7,6 +7,10 @@
 - extension to the ChangeLog.
 ------------------------------------------------------------------------
 
+New feature: Krusader is able to send e-mails by thunderbird
+   - one can set up thunderbird as an e-mail sender in the dependencies
+   - from now more than one file can be sent in an attachment
+
 New feature: for content searching (searcher, advanced selection,
     synchronizer), the content encoding can be given.
 
