@@ -3,6 +3,8 @@ Codebase in sync with the KDE3 2.00.0-beta1 release
 
     PORTED: Krusader to KDE4
 
+    ADDED: thunderbird can be used as the default e-mail sender
+    ADDED: sending more than one file in e-mail is possible
     ADDED: submenus for categories in UserAction menu and context menu
     ADDED: character encoding for content search
     ADDED: select remote encoding for krarc
